# rust-envsafe-cli

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.example.yml  entrypoint.sh
npm/: index.js  install.js  package.json
src/: api.rs  config.rs  lib.rs  main.rs  rotation.rs  storage.rs  watcher.rs
src/commands/: config.rs  create.rs  init.rs  lang.rs  link.rs  list.rs  login.rs  logout.rs  m2m.rs  mod.rs  projects.rs  pull.rs  push.rs  rotate.rs  run.rs  select.rs  watch.rs  whoami.rs
src/utils/: env_parser.rs  i18n.rs  mod.rs
tests/: api_tests.rs  cli_tests.rs  config_tests.rs
wiki/: Architecture.md  Auto-Rotation.md  Development.md  Docker-Integration.md  Home.md  Installation.md  Usage.md
