[package]
name = "envsafe-cli"
version = "0.2.9"
edition = "2021"
authors = ["EnvSafe Team"]
description = "CLI pour EnvSafe - Gestionnaire sécurisé de variables d'environnement avec rotation et hot reload"
license = "MIT"
repository = "https://github.com/Ifiboys/envsafe-cli"

[[bin]]
name = "envsafe"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
dirs = "5.0"
dotenv = "0.15"

# Interactive prompts
dialoguer = "0.11"

# Terminal utilities
indicatif = "0.17"
console = "0.15"

# WebSocket for hot reload
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Shared memory
shared_memory = "0.12"

# File watching
notify = "6.1"

# Encryption
aes-gcm = "0.10"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL opening
open = "5.0"

# Password hashing for rotation
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
